Add authentication demo but not supported