@@ -20,7 +20,26 @@
 # remove command `tail -f /dev/null` in `/usr/local/sbin/start.sh`, so we can run subsequent commands
 sed -i -E 's/tail -f \/dev\/null/ /g' /usr/local/sbin/start.sh
 
+# Clean up old configurations
+export HADOOP_OPTS=$(echo $HADOOP_OPTS | sed 's/-XX:MaxPermSize=[0-9]*m//g')
+export HIVE_OPTS=$(echo $HIVE_OPTS | sed 's/-XX:MaxPermSize=[0-9]*m//g')
+
+# Remove unnecessary cloud connectors from Hive
+echo ">> Cleanup unnecessary cloud connectors GCS from Hive..."
+
+CLOUD_PATTERNS="gcs google"
+
+for pattern in $CLOUD_PATTERNS; do
+  find /opt -type f -name "*${pattern}*.jar" -exec rm -f {} \;
+done
+
+echo ">> Remaining Hive libs after cleanup:"
+ls -1 /opt | grep -E "gcs|google" || echo ">> Clean! No gcs connector jars left."
+
+echo ">> Starting Hive init..."
+
 cp /tmp/hive/core-site.xml /tmp/hadoop-conf
+
 /bin/bash /usr/local/sbin/start.sh
 hdfs dfs -mkdir -p /user/gravitino
 hdfs dfs -mkdir -p /user/hive/warehouse
@@ -29,7 +48,7 @@ hdfs dfs -mkdir -p /user/hudi/warehouse
 hdfs dfs -mkdir -p /user/paimon/warehouse
 useradd -g hdfs lisa
 useradd -g hdfs manager
-useradd -g hdfs hive
+useradd -g hdfs anonymous
 hdfs dfs -chmod 777 /user/hive/warehouse/
 hdfs dfs -chmod 777 /user/iceberg/warehouse/
 hdfs dfs -chmod 777 /user/hudi/warehouse/
